# metadata

./: .gitignore  README.md  pyproject.toml
src/: metadata.py
src/data/: file.docx  file.pptx  file.xlsx
src/tests/: test_main.py
